适配家中电脑的配置

--- a/web/admin/userInfo.html
+++ b/web/admin/userInfo.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link href="http://192.168.1.129:8080/admin/css/css.css" rel="stylesheet" type="text/css"/>
+    <!--<link href="http://192.168.1.129:8080/admin/css/css.css" rel="stylesheet" type="text/css"/>-->
+    <link href="http://192.168.31.79:8080/admin/css/css.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<form action="http://192.168.1.129:8080/LoginAction" method="post" id="form">
+<!--<form action="http://192.168.1.129:8080/LoginAction" method="post" id="form">-->
+<form action="http://192.168.31.79:8080/LoginAction" method="post" id="form">
     <table class="tabAdd" cellspacing="1px" cellpadding="0">
         <tr>
             <th class="item" >登录接口：</th>
-            <td class="content"colspan="2">http://192.168.1.129:8080/LoginAction</td>
+            <!--<td class="content"colspan="2">http://192.168.1.129:8080/LoginAction</td>-->
+            <td class="content"colspan="2">http://192.168.31.79:8080/LoginAction</td>
         </tr>
         <tr>
             <th class="item" >访问方式：</th>
