--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title> 接口API</title>
 
-    <link href="http://192.168.1.129:8080/admin/css/css.css" rel="stylesheet" type="text/css"/>
+    <!--<link href="http://192.168.1.129:8080/admin/css/css.css" rel="stylesheet" type="text/css"/>-->
+    <link href="http://192.168.31.79:8080/admin/css/css.css" rel="stylesheet" type="text/css"/>
 </head>
 <br>
 <h2 align="center">接口API</h2>
@@ -13,7 +14,8 @@
 <table class="tabAdd" cellspacing="1px" cellpadding="0">
     <tr>
         <th class="item">用户接口：</th>
-        <td class="content"><a target="_blank" href="http://192.168.1.129:8080/admin/userInfo.html">http://192.168.1.129:8080/admin/userInfo.html</a>
+        <!--<td class="content"><a target="_blank" href="http://192.168.1.129:8080/admin/userInfo.html">http://192.168.1.129:8080/admin/userInfo.html</a>-->
+        <td class="content"><a target="_blank" href="http://192.168.31.79:8080/admin/userInfo.html">http://192.168.31.79:8080/admin/userInfo.html</a>
         </td>
     </tr>
 </table>
